--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ port=8080
 ## conect db
 spring.datasource.url =jdbc:postgresql://localhost:5432/POS
 spring.datasource.username = postgres
-spring.datasource.password = admin1234
+spring.datasource.password = 1234
+#spring.datasource.password = admin1234
 
 # Gunakan dialect yang valid di Hibernate 6
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
